--- a/docs/publikationen/qsp-02-2025.md
+++ b/docs/publikationen/qsp-02-2025.md
@@ -10,7 +10,7 @@ Jeder Funkamateur kennt das Gefühl nach Abschluss der Prüfung endlich los lege
 Viele davon können dies jedoch nicht so leicht aus den eigenen vier Wänden, da sie ganz einfach Antennengeschädigt sind.
 Das anbringen von Antennen in irgendeiner Form ist nicht möglich und ein einfaches Funken aus der Wohnung stark eingeschränkt.
 Als einzige Möglichkeit bleibt hier nur mit einem 2m/70cm Hand-Funkgerät vom Balkon aus zu funken. Ist dieser zusätzlich verbaut oder in einem Innenhof ist es schon fast unmöglich.
-Der einziger Ausweg hilft hier nur, der Weg in die Natur für SOTA, POTA, Fielddays, etc. Hier bleibt jedoch immer der bittere Beigeschmack, dass es von Zuhause aus einfach nicht möglich ist.
+Der einziger Ausweg ist hier nur: der Weg in die Natur für SOTA, POTA, Fielddays, etc. Hier bleibt jedoch immer der bittere Beigeschmack, dass es von Zuhause aus einfach nicht möglich ist.
 
 Im DX-Camp 2024 sassen wir eines Abends am Lagerfeuer und Gerhard (OE6PGM) erzählte uns von einem neuen Projekt welches er sich überlegte:
 Ziel war es eine kleine Platine mit einem einfachen FM-Modul für 2m zu entwerfen um diese Remote in einem Baum zu hängen um doch von unterwegs QRV zu sein.
