--- a/docs/publikationen/qsp-02-2025.md
+++ b/docs/publikationen/qsp-02-2025.md
@@ -20,10 +20,10 @@ Im gleichen Camp kam auch die Idee auf einen Verein für die Idee von *Remote St
 Als Verein ist es leichter Geld für das benötigte Material zu sammeln, die Stationen bei der Behörde anzumelden und diese den Mitgliedern zur Verfügung zu stellen.
 
 In den letzten Monaten stellten wir nun den neuen Verein ***Amateurfunkclub für Remote Stationen*** welcher in ganz Österreich aktiv sein möchte auf die Füße:
-Stellten Anträge bei den Behörden, eröffneten ein Konto und wühlten uns durch verschiedene Software welche uns unterstützen würde. Zusätzlich baten wir beim Landesverband Oberösterreich um Aufnahme als ADL525 um hier weitere Kontakte zu knüpfen.
+Stellten Anträge bei den Behörden, eröffneten ein Konto und wühlten uns durch verschiedene Software welche uns unterstützen würde. Zusätzlich baten wir beim Landesverband Oberösterreich um Aufnahme als ADL um hier weitere Kontakte zu knüpfen. Die Aufnahme als ADL525 wurde im November 2024 beschlossen, hier ist jedoch anzumerken das wir uns als Arbeitsgruppe sehen und somit eine Mitgliedschaft bei mehreren Vereinen bzw. ADLs begrüßen würden.
 
-Der Verein hat sich **Open Source** und **Open Hardware** verschieben. Somit wird der gesamte Source Code öffentlich auf [Github](https://github.com/OE5XRX) zur Verfügung gestellt.
-Auch die Entwürfe für PCBs und CAD Teile werden auf Github geteilt. Zusätzlich findet man unsere [Webseite](https://oe5xrx.org) dort als Source Code.
+Der Verein hat sich **Open Source** und **Open Hardware** verschrieben. Somit wird der gesamte Source Code öffentlich auf [Github](https://github.com/OE5XRX) zur Verfügung gestellt.
+Auch die Entwürfe für PCBs und CAD Teile werden auf Github geteilt. Zusätzlich findet man unsere [Webseite](https://oe5xrx.org) als Source Code.
 
 Nun sind wir auf der suche nach weiteren Mitgliedern welche uns weiter tatkräftig bei der Entwicklung helfen wollen. Egal ob Webseite, Software oder Hardware Design, wir suchen aktuell aktive Mitglieder in ganz Österreich.
 Sollten wir dein Interesse geweckt haben, melde dich bei uns unter oe5xrx@gmail.com oder finde weitere Informationen auf unserer [Webseite](https:oe5xrx.org).
