--- a/docs/publikationen/qsp-02-2025.md
+++ b/docs/publikationen/qsp-02-2025.md
@@ -25,5 +25,7 @@ Stellten Anträge bei den Behörden, eröffneten ein Konto und wühlten uns durc
 Der Verein hat sich **Open Source** und **Open Hardware** verschrieben. Somit wird der gesamte Source Code öffentlich auf [Github](https://github.com/OE5XRX) zur Verfügung gestellt.
 Auch die Entwürfe für PCBs und CAD Teile werden auf Github geteilt. Zusätzlich findet man unsere [Webseite](https://oe5xrx.org) als Source Code.
 
+AKTUELLE TECHNIK...
+
 Nun sind wir auf der suche nach weiteren Mitgliedern welche uns weiter tatkräftig bei der Entwicklung helfen wollen. Egal ob Webseite, Software oder Hardware Design, wir suchen aktuell aktive Mitglieder in ganz Österreich.
 Sollten wir dein Interesse geweckt haben, melde dich bei uns unter oe5xrx@gmail.com oder finde weitere Informationen auf unserer [Webseite](https:oe5xrx.org).
