--- a/docs/publikationen/qsp-02-2025.md
+++ b/docs/publikationen/qsp-02-2025.md
@@ -28,4 +28,4 @@ Auch die Entwürfe für PCBs und CAD Teile werden auf Github geteilt. Zusätzlic
 AKTUELLE TECHNIK...
 
 Nun sind wir auf der suche nach weiteren Mitgliedern welche uns weiter tatkräftig bei der Entwicklung helfen wollen. Egal ob Webseite, Software oder Hardware Design, wir suchen aktuell aktive Mitglieder in ganz Österreich.
-Sollten wir dein Interesse geweckt haben, melde dich bei uns unter oe5xrx@gmail.com oder finde weitere Informationen auf unserer [Webseite](https:oe5xrx.org).
+Sollten wir dein Interesse geweckt haben, melde dich bei uns unter oe5xrx@gmail.com oder finde weitere Informationen auf unserer [Webseite](https://oe5xrx.org).
