--- a/docs/publikationen/qsp-04-2025.md
+++ b/docs/publikationen/qsp-04-2025.md
@@ -10,33 +10,33 @@ Hast Du Zuhause eine Antenne für den Amateurfunk fix montiert? Nein? Dann wohns
 Fast jeder kennt diese Probleme, man ist ganz einfach **Antennengeschädigt**.
 
 Mit neuer Technologie kommen immer neuere Möglichkeiten, eine davon wäre eine Remote Station aufzubauen und diese von Zuhause aus zu betreiben. Im Grunde eine gute Idee!
-Doch wo kann man nun seine Antenne aufbauen ohne das ich gleich einen Grund kaufen muss? Was für Geräte brauch ich und was muss ich dafür ausgeben?
+Doch wo kann man nun seine Antenne aufbauen ohne das man gleich einen Grund kaufen muss? Was für Geräte brauch ich dazu und was muss man dafür bezahlen?
 
-Um so teurer das Gerät, um so leichter lässt es sich als Remote Station verwenden. Aber sehr gute Standorte verfügen meist über sehr schlechte Infrastruktur und Bedienungen:
+Um so teurer das Gerät, um so leichter lässt es sich als Remote Station verwenden. Aber sehr gute Standorte verfügen meist über eine sehr schlechte Infrastruktur und Bedienungen:
 - Kein Strom im Schuppen,
 - bei den großen Bäumen auf der Wiese besteht kein Schutz vor dem Wetter (so wie auch keinen Strom).
+
 Wer möchte da schon ein 2.000 Euro teures Amateurfunkgerät stehen haben welches Wind und Wetter ausgesetzt ist?
 
-Somit bleibt eigentlich nur der Selbstbau über um ein geeignetes Funkgerät zu bauen welches Wind und Wetter fest ist und einfach im Aufbau und Bedienung ist.
+Somit bleibt eigentlich nur der Selbstbau um ein geeignetes Funkgerät zu bauen welches Wind und Wetter fest ist und einfach im Aufbau und der Bedienung ist.
 
 ### Amateurfunkclub
 
 Da so ein Projekt meist von mehreren Personen gestemmt werden muss, war der nächste logische Schritt die Gründung eines **Amateurfunkclubs für Remote Stationen**. Die Aufgaben könnten folgendermaßen unter den aktiven Mitgliedern verteilt werden:
-- Entwicklung eines Modularen Funkgeräts,
+- Entwicklung eines modularen Funkgeräts,
 - Suchen geeigneter Standorte und definieren des Funkgerätes,
-- Aufbau eines Funkgeräts für verschiedene Anwendungen und Standorte (2m, 70cm, KW, HamNet, LTE, etc.),
+- Aufbau eines Funkgeräts für verschiedene Anwendungen und Standorte (2m, 70cm, KW, Hamnet, LTE, etc.),
 - Aufbau neuer Standorte (Funkgerät, Antenne, Stromversorgung, etc.),
 - Wartung existierende Standorte,
 - Wartung der Serverinfrastruktur,
 - Entwicklung von Firmware und Software.
 
 Die Gründung des Vereins erfolgte im September 2024, der Beitritt als ADL525 war mit November des selben Jahres abgeschlossen.
-Der Beitritt als ADL525 war für uns ein wichtiger Schritt da wir einen starken Dachverein hinter uns haben wollten. Wir sehen uns nicht als klassischen ADL mit regelmäßigen Treffen oder Ausbildungen sondern als eine Gruppe von technisch interessierten Amateurfunkern die ein gemeinsames Ziel haben: Aufbau und Betrieb von Remote Stationen in Österreich.
+Der Beitritt als ADL525 war für uns ein wichtiger Schritt da wir einen starken Dachverein hinter uns haben wollten. Wir sehen uns nicht als klassischen ADL mit regelmäßigen Treffen oder Ausbildungen sondern als eine Gruppe von technisch interessierten Amateurfunkern die ein gemeinsames Projekt haben: Aufbau und Betrieb von Remote Stationen in Österreich.
 
 ### Aktueller Stand
 
-Aktuell wird an einem modularem Funkgerät gearbeitet. Hierbei soll der Fokus auf wichtige Basiskomponenten liegen die auch für zukünftige Entwicklungen wiederverwendet werden sollen.
-Ein paar Fakten:
+Aktuell wird an einem modularem Funkgerät gearbeitet. Hierbei soll der Fokus auf wichtige Basiskomponenten liegen die auch für zukünftige Entwicklungen wiederverwendet werden sollen:
 - Aufbau ähnlich wie ein Modulgruppenträger von 19 Zoll Geräten:
   - Modulare Einzelmodule
   - Bus-System als Backplane
@@ -50,7 +50,5 @@ Technische Details kommen in weitere QSP Artikel.
 Bereits nach Gründung des Vereines stellten wir den Antrag für ein Club-Rufzeichen: OE5XRX.
 Dies ist aktuell in Gunskirchen, Oberösterreich und als zweiten Sitz in Döbriach, Kärnten gemeldet.
 An dem Standort in Oberösterreich befindet sich schon eine kleine Remote Station für die Bänder 2m und 70cm welche jedoch von unserem Konzept noch heuer abgelöst werden sollte.
-
-### Zukunft
 
 Wir suchen aktuell viele neue Kollegen die uns bei unserem Projekt und unserem Verein helfen wollen. Weitere Informationen findet Ihr hier http://oe5xrx.org oder Ihr könnt auch mit uns unter oe5xrx AT gmail PUNKT com in Kontakt treten. Solltet Ihr uns Finanziell unterstützen wollen, könnt ihr das hier machen: https://www.gofundme.com/f/gemeinsam-remotestationen-fur-funkbegeisterte-schaffen
