--- a/docs/publikationen/qsp-04-2025.md
+++ b/docs/publikationen/qsp-04-2025.md
@@ -4,51 +4,51 @@ nav_order: 1
 parent: Publikationen
 ---
 
-# QSP (geplant für April 2025)
+# QSP (geplant für April 2025) ** (*Anmerkung: QSP-Titel: "der neue Amateurfunkklub für Remotestationen"
 
 Hast Du Zuhause eine Antenne für den Amateurfunk fix montiert? Nein? Dann wohnst du vermutlich nicht in einer guten Lage (1. Stock von einem Hochhaus oder eine verwinkelte Wohnanlage). Oder Du hast nicht das Okay des Vermieters eine Antenne auf dem Dach zu montieren oder gar deine XYL findet Antennen "hässlich".
 Fast jeder kennt diese Probleme, man ist ganz einfach **Antennengeschädigt**.
+Mit Remotestationen lässt sich aber nicht nur das Antennenproblem lösen, sonder bieten sie auch eine Unmenge an Anwendungsmöglichkeiten, sei es für DX-Peditionen zu Inseln in Naturschutzgebieten (*Anm. eventuell noch beispiel recherchieren) , um dem hohen Rauschpegel am Stadtrand zu entkommen oder einfach um sich die  nochbesseren Konditionen von anderen/weiteren Standorten zu nutzen.
 
-Mit neuer Technologie kommen immer neuere Möglichkeiten, eine davon wäre eine Remote Station aufzubauen und diese von Zuhause aus zu betreiben. Im Grunde eine gute Idee!
-Doch wo kann man nun seine Antenne aufbauen ohne das man gleich einen Grund kaufen muss? Was für Geräte brauch ich dazu und was muss man dafür bezahlen?
+Mit neuer Technologie kommen immer neuere Möglichkeiten, eine davon wäre eine Remote Station aufzubauen und diese von Zuhause aus zu betreiben. Im Grunde eine gute Idee! Doch wo kann man nun die Antenne(n) aufbauen ohne das man gleich einen Grund kaufen muss? Was für Geräte brauch ich dazu und was muss man dafür bezahlen?
 
-Um so teurer das Gerät, um so leichter lässt es sich als Remote Station verwenden. Aber sehr gute Standorte verfügen meist über eine sehr schlechte Infrastruktur und Bedienungen:
-- Kein Strom im Schuppen,
-- bei den großen Bäumen auf der Wiese besteht kein Schutz vor dem Wetter (so wie auch keinen Strom).
+Um so teurer das Gerät, um so leichter lässt es sich als Remote Station verwenden. Aber sehr gute Standorte verfügen meist über eine sehr schlechte Infrastruktur und Bedingungen:
+- Standort schwer erreichbar
+- Kein Strom im potenziellen Shack
+- kein Schutz vor Wetter beim perfekten Antennenspannplatz
 
-Wer möchte da schon ein 2.000 Euro teures Amateurfunkgerät stehen haben welches Wind und Wetter ausgesetzt ist?
+Wer möchte da schon ein 2.000 Euro teures Amateurfunkgerät kaufen, welches dann Wind und Wetter ausgesetzt ist?
+Somit bleibt eigentlich nur der Selbstbau um ein geeignetes Funkgerät zu bauen welches Wind und Wetter trotzt und einfach im Aufbau und der Bedienung ist.
 
-Somit bleibt eigentlich nur der Selbstbau um ein geeignetes Funkgerät zu bauen welches Wind und Wetter fest ist und einfach im Aufbau und der Bedienung ist.
+## Gründung eines Amateurfunkklubs mit Fokus auf Remotestationen
 
-### Amateurfunkclub
-
-Da so ein Projekt meist von mehreren Personen gestemmt werden muss, war der nächste logische Schritt die Gründung eines **Amateurfunkclubs für Remote Stationen**. Die Aufgaben könnten folgendermaßen unter den aktiven Mitgliedern verteilt werden:
-- Entwicklung eines modularen Funkgeräts,
-- Suchen geeigneter Standorte und definieren des Funkgerätes,
-- Aufbau eines Funkgeräts für verschiedene Anwendungen und Standorte (2m, 70cm, KW, Hamnet, LTE, etc.),
+Da so ein Projekt meist von mehreren Personen gestemmt werden muss, war für uns der nächste logische Schritt die Gründung eines **Amateurfunkclubs für Remote Stationen**. Gmeinsam möchten wir so Remotestationen in Österreich aufbauen, Kernpunkte des Ganzen sind: (* Anm: möglichkeitsform unvorteilhaft ?)
+- Entwicklung einer modularen Funkstation,
+- Suchen geeigneter Standorte und definieren der Station,
+- Aufbau von Stationen für verschiedene Anwendungen und Standorte (2m, 70cm, KW, HAMNET oder LTE-Anbindung, etc.),
 - Aufbau neuer Standorte (Funkgerät, Antenne, Stromversorgung, etc.),
 - Wartung existierende Standorte,
 - Wartung der Serverinfrastruktur,
 - Entwicklung von Firmware und Software.
 
 Die Gründung des Vereins erfolgte im September 2024, der Beitritt als ADL525 war mit November des selben Jahres abgeschlossen.
-Der Beitritt als ADL525 war für uns ein wichtiger Schritt da wir einen starken Dachverein hinter uns haben wollten. Wir sehen uns nicht als klassischen ADL mit regelmäßigen Treffen oder Ausbildungen sondern als eine Gruppe von technisch interessierten Amateurfunkern die ein gemeinsames Projekt haben: Aufbau und Betrieb von Remote Stationen in Österreich.
+Der Beitritt als ADL525 war für uns ein wichtiger Schritt da wir einen starken Dachverein hinter uns haben wollten. Wir sehen uns nicht als klassischen ADL mit regelmäßigen Treffen im Clubheim sondern als eine Gruppe von technisch interessierten Amateurfunkern die ein gemeinsames Projekt haben: Aufbau und Betrieb von Remote Stationen in Österreich.
 
 ### Aktueller Stand
 
-Aktuell wird an einem modularem Funkgerät gearbeitet. Hierbei soll der Fokus auf wichtige Basiskomponenten liegen die auch für zukünftige Entwicklungen wiederverwendet werden sollen:
+Aktuell wird an einer modularen Funkstation gearbeitet. Hierbei soll der Fokus auf wichtige Basiskomponenten liegen die auch für zukünftige Entwicklungen wiederverwendet werden sollen:
 - Aufbau ähnlich wie ein Modulgruppenträger von 19 Zoll Geräten:
   - Modulare Einzelmodule
   - Bus-System als Backplane
 - Einfache und günstige Fertigung eines Gehäuses (3D Druck)
-- 19 Zoll kompatibel
+- optional 19 Zoll kompatibel (*inwierfern, bzw mit erstem aufzählungspunkt überflüssig(?))
 
-Technische Details kommen in weitere QSP Artikel.
+Die Technischen Ausführung sowie die Dokummentation und Software mit der die Remotestationen realisiert werden, basiert für den derzeitigen Teststandort auf Opensourcelösungen und auch für Zukünfitge Stationen ist geplant, auf Opensource aufzubauen und dieses Projekt Opensource weiterzuführen.
 
 ### OE5XRX
 
 Bereits nach Gründung des Vereines stellten wir den Antrag für ein Club-Rufzeichen: OE5XRX.
 Dies ist aktuell in Gunskirchen, Oberösterreich und als zweiten Sitz in Döbriach, Kärnten gemeldet.
-An dem Standort in Oberösterreich befindet sich schon eine kleine Remote Station für die Bänder 2m und 70cm welche jedoch von unserem Konzept noch heuer abgelöst werden sollte.
+An dem Standort in Oberösterreich befindet sich schon eine kleine Remote Station für die Bänder 2m und 70cm welche jedoch von unserem Konzept noch heuer abgelöst werden soll.
 
-Wir suchen aktuell viele neue Kollegen die uns bei unserem Projekt und unserem Verein helfen wollen. Weitere Informationen findet Ihr hier http://oe5xrx.org oder Ihr könnt auch mit uns unter oe5xrx AT gmail PUNKT com in Kontakt treten. Solltet Ihr uns Finanziell unterstützen wollen, könnt ihr das hier machen: https://www.gofundme.com/f/gemeinsam-remotestationen-fur-funkbegeisterte-schaffen
+Wir suchen aktuell viele neue tatkräftige Kollegen die uns bei unserem Projekt und unserem Verein helfen wollen. Weitere Informationen findet Ihr hier http://oe5xrx.org oder Ihr könnt auch mit uns unter oe5xrx AT gmail PUNKT com *(Anm für qsp final dann echte mail einfügen!) in Kontakt treten. Solltet Ihr uns einfach nur Finanziell unterstützen wollen weil ich die Idee gefällt, könnt ihr das auch hier machen: https://www.gofundme.com/f/gemeinsam-remotestationen-fur-funkbegeisterte-schaffen
