--- a/docs/publikationen/qsp-04-2025.md
+++ b/docs/publikationen/qsp-04-2025.md
@@ -4,35 +4,40 @@ nav_order: 1
 parent: Publikationen
 ---
 
-# QSP (geplant für April 2025) ** (*Anmerkung: QSP-Titel: "der neue Amateurfunkklub für Remotestationen"
+# QSP "Der Neue Amateurfunkklub Für Remotestationen" (geplant für April 2025)
 
-Hast Du Zuhause eine Antenne für den Amateurfunk fix montiert? Nein? Dann wohnst du vermutlich nicht in einer guten Lage (1. Stock von einem Hochhaus oder eine verwinkelte Wohnanlage). Oder Du hast nicht das Okay des Vermieters eine Antenne auf dem Dach zu montieren oder gar deine XYL findet Antennen "hässlich".
+Hast Du Zuhause eine Antenne für den Amateurfunk fix montiert? Nein? Dann wohnst Du vermutlich nicht in einer guten Lage (1. Stock von einem Hochhaus oder eine verwinkelte Wohnanlage). Oder Du hast nicht das Okay des Vermieters eine Antenne auf dem Dach zu montieren oder gar deine XYL findet Antennen "hässlich".
 Fast jeder kennt diese Probleme, man ist ganz einfach **Antennengeschädigt**.
-Mit Remotestationen lässt sich aber nicht nur das Antennenproblem lösen, sonder bieten sie auch eine Unmenge an Anwendungsmöglichkeiten, sei es für DX-Peditionen zu Inseln in Naturschutzgebieten (*Anm. eventuell noch beispiel recherchieren) , um dem hohen Rauschpegel am Stadtrand zu entkommen oder einfach um sich die  nochbesseren Konditionen von anderen/weiteren Standorten zu nutzen.
+Mit Remotestationen lässt sich aber nicht nur das Antennenproblem lösen, sonder bieten sie auch eine Unmenge an Anwendungsmöglichkeiten:
+- sei es für DX-Peditionen zu Inseln in Naturschutzgebieten,
+- um dem hohen Rauschpegel am Stadtrand zu entkommen oder
+- einfach um sich die noch besseren Konditionen von anderen/weiteren Standorten zu nutzen.
 
-Mit neuer Technologie kommen immer neuere Möglichkeiten, eine davon wäre eine Remote Station aufzubauen und diese von Zuhause aus zu betreiben. Im Grunde eine gute Idee! Doch wo kann man nun die Antenne(n) aufbauen ohne das man gleich einen Grund kaufen muss? Was für Geräte brauch ich dazu und was muss man dafür bezahlen?
+Mit neuer Technologie kommen immer neuere Möglichkeiten, eine davon wäre eine Remote Station aufzubauen und diese von Zuhause aus zu betreiben.
+Im Grunde eine gute Idee! Doch wo kann man nun die Antenne(n) aufbauen ohne das man gleich einen Grund kaufen muss? Was für Geräte brauch ich dazu und was muss man dafür bezahlen?
 
-Um so teurer das Gerät, um so leichter lässt es sich als Remote Station verwenden. Aber sehr gute Standorte verfügen meist über eine sehr schlechte Infrastruktur und Bedingungen:
-- Standort schwer erreichbar
-- Kein Strom im potenziellen Shack
-- kein Schutz vor Wetter beim perfekten Antennenspannplatz
+Um so teurer das Gerät, um so leichter lässt es sich als Remote Station verwenden. Aber sehr gute Standorte verfügen meist über eine sehr schlechte Infrastruktur:
+- Standort schwer erreichbar,
+- Kein Strom im potenziellen Shack,
+- kein Schutz vor Wetter beim perfekten Antennenspannplatz.
 
 Wer möchte da schon ein 2.000 Euro teures Amateurfunkgerät kaufen, welches dann Wind und Wetter ausgesetzt ist?
 Somit bleibt eigentlich nur der Selbstbau um ein geeignetes Funkgerät zu bauen welches Wind und Wetter trotzt und einfach im Aufbau und der Bedienung ist.
 
 ## Gründung eines Amateurfunkklubs mit Fokus auf Remotestationen
 
-Da so ein Projekt meist von mehreren Personen gestemmt werden muss, war für uns der nächste logische Schritt die Gründung eines **Amateurfunkclubs für Remote Stationen**. Gmeinsam möchten wir so Remotestationen in Österreich aufbauen, Kernpunkte des Ganzen sind: (* Anm: möglichkeitsform unvorteilhaft ?)
+Da so ein Projekt meist von mehreren Personen gestemmt werden muss, war für uns der nächste logische Schritt die Gründung eines **Amateurfunkclubs für Remote Stationen**.
+Gemeinsam möchten wir so Remotestationen in Österreich aufbauen, Kernpunkte des Ganzen sind:
 - Entwicklung einer modularen Funkstation,
+- Entwicklung von Firmware und Software,
 - Suchen geeigneter Standorte und definieren der Station,
 - Aufbau von Stationen für verschiedene Anwendungen und Standorte (2m, 70cm, KW, HAMNET oder LTE-Anbindung, etc.),
 - Aufbau neuer Standorte (Funkgerät, Antenne, Stromversorgung, etc.),
 - Wartung existierende Standorte,
-- Wartung der Serverinfrastruktur,
-- Entwicklung von Firmware und Software.
+- Wartung der Serverinfrastruktur.
 
 Die Gründung des Vereins erfolgte im September 2024, der Beitritt als ADL525 war mit November des selben Jahres abgeschlossen.
-Der Beitritt als ADL525 war für uns ein wichtiger Schritt da wir einen starken Dachverein hinter uns haben wollten. Wir sehen uns nicht als klassischen ADL mit regelmäßigen Treffen im Clubheim sondern als eine Gruppe von technisch interessierten Amateurfunkern die ein gemeinsames Projekt haben: Aufbau und Betrieb von Remote Stationen in Österreich.
+Der Beitritt als ADL525 war für uns ein wichtiger Schritt da wir einen starken Dachverein hinter uns haben wollten. Wir sehen uns nicht als klassischen ADL mit regelmäßigen Treffen im Clubheim sondern als eine Gruppe von technisch interessierten Amateurfunkern die ein gemeinsames Projekt haben: **Aufbau und Betrieb von Remote Stationen in Österreich**.
 
 ### Aktueller Stand
 
@@ -41,9 +46,10 @@ Aktuell wird an einer modularen Funkstation gearbeitet. Hierbei soll der Fokus a
   - Modulare Einzelmodule
   - Bus-System als Backplane
 - Einfache und günstige Fertigung eines Gehäuses (3D Druck)
-- optional 19 Zoll kompatibel (*inwierfern, bzw mit erstem aufzählungspunkt überflüssig(?))
+- optional 19 Zoll kompatibel zum Einbau in einen existierenden Server/Netzwerk-Schrank.
 
-Die Technischen Ausführung sowie die Dokummentation und Software mit der die Remotestationen realisiert werden, basiert für den derzeitigen Teststandort auf Opensourcelösungen und auch für Zukünfitge Stationen ist geplant, auf Opensource aufzubauen und dieses Projekt Opensource weiterzuführen.
+Die technischen Ausführung sowie die Dokumentation werden mit Open Source Tools gelöst. Dies ist uns wichtig um neuen Mitgliedern einen leichten Einstieg zu geben und Kosten zu reduzieren.
+Weiters werden alle Projekte des Vereines als Open Source Projekte geführt und werden somit auf Github (https://github.com/OE5XRX) veröffentlicht.
 
 ### OE5XRX
 
@@ -51,4 +57,6 @@ Bereits nach Gründung des Vereines stellten wir den Antrag für ein Club-Rufzei
 Dies ist aktuell in Gunskirchen, Oberösterreich und als zweiten Sitz in Döbriach, Kärnten gemeldet.
 An dem Standort in Oberösterreich befindet sich schon eine kleine Remote Station für die Bänder 2m und 70cm welche jedoch von unserem Konzept noch heuer abgelöst werden soll.
 
-Wir suchen aktuell viele neue tatkräftige Kollegen die uns bei unserem Projekt und unserem Verein helfen wollen. Weitere Informationen findet Ihr hier http://oe5xrx.org oder Ihr könnt auch mit uns unter oe5xrx AT gmail PUNKT com *(Anm für qsp final dann echte mail einfügen!) in Kontakt treten. Solltet Ihr uns einfach nur Finanziell unterstützen wollen weil ich die Idee gefällt, könnt ihr das auch hier machen: https://www.gofundme.com/f/gemeinsam-remotestationen-fur-funkbegeisterte-schaffen
+Wir suchen aktuell viele neue tatkräftige Kollegen die uns bei unserem Projekt und unserem Verein helfen wollen.
+Weitere Informationen findet Ihr hier https://oe5xrx.org oder Ihr könnt euch auch unter oe5xrx AT gmail PUNKT com bei uns melden.
+Solltet Ihr uns einfach nur Finanziell unterstützen wollen, weil euch die Idee gefällt, könnt Ihr das hier machen: https://www.gofundme.com/f/gemeinsam-remotestationen-fur-funkbegeisterte-schaffen
