--- a/docs/publikationen/qsp-04-2025.md
+++ b/docs/publikationen/qsp-04-2025.md
@@ -4,59 +4,68 @@ nav_order: 1
 parent: Publikationen
 ---
 
-# QSP "Der Neue Amateurfunkklub Für Remotestationen" (geplant für April 2025)
+# QSP "Der Neue Amateurfunkclub Für Remotestationen" (geplant für April 2025)
 
-Hast Du Zuhause eine Antenne für den Amateurfunk fix montiert? Nein? Dann wohnst Du vermutlich nicht in einer guten Lage (1. Stock von einem Hochhaus oder eine verwinkelte Wohnanlage). Oder Du hast nicht das Okay des Vermieters eine Antenne auf dem Dach zu montieren oder gar deine XYL findet Antennen "hässlich".
-Fast jeder kennt diese Probleme, man ist ganz einfach **Antennengeschädigt**.
-Mit Remotestationen lässt sich aber nicht nur das Antennenproblem lösen, sonder bieten sie auch eine Unmenge an Anwendungsmöglichkeiten:
-- sei es für DX-Peditionen zu Inseln in Naturschutzgebieten,
-- um dem hohen Rauschpegel am Stadtrand zu entkommen oder
+Hast Du Zuhause eine Antenne für den Amateurfunk fix montiert? Nein? Dann wohnst Du aus Funkperspektive betrachtet vermutlich nicht in einer guten Lage. Beispielsweise im 1. Stock von einem Hochhaus, in einer verwinkelte Wohnanlage, ein Okay des Vermieters eine Antenne auf dem Dach zu montieren fehlt, oder aber deine XYL findet Antennen einfach nur "hässlich".
+Fast jeder kennt diese Probleme, man ist dann ganz einfach "**Antennengeschädigt**".
+
+Wenn sich die oben genannten Probleme nicht direkt lösen lassen, verkriecht sich der findige Funkamateur dann in den nicht vorhandenen Shack und fängt zu denken an...
+
+Wo kann man nun die gewünschten Antenne(n) aufbauen, ohne dass man gleich einen Grund kaufen muss? Was für Geräte brauch ich dazu und was muss man dafür bezahlen? Gäbe es doch nur die Möglichkeit, jederzeit zum Wochenendhäuschen in die Berge zu fahren...
+
+Eine tolle Möglichkeit wäre es, eine Remote Station aufzubauen und diese von Zuhause aus zu betreiben. Im Grunde eine gute Idee! Klingt aber irrsinnig aufwändig.
+
+Mit Remotestationen lässt sich nicht nur das Antennenproblem lösen, sondern bieten auch eine einige weitere Anwendungsmöglichkeiten:
+- um dem hohen Rauschpegel am Stadtrand zu entkommen,
+- für DX-Peditionen zu Inseln in Naturschutzgebieten,
 - einfach um sich die noch besseren Konditionen von anderen/weiteren Standorten zu nutzen.
 
-Mit neuer Technologie kommen immer neuere Möglichkeiten, eine davon wäre eine Remote Station aufzubauen und diese von Zuhause aus zu betreiben.
-Im Grunde eine gute Idee! Doch wo kann man nun die Antenne(n) aufbauen ohne das man gleich einen Grund kaufen muss? Was für Geräte brauch ich dazu und was muss man dafür bezahlen?
 
-Um so teurer das Gerät, um so leichter lässt es sich als Remote Station verwenden. Aber sehr gute Standorte verfügen meist über eine sehr schlechte Infrastruktur:
+Deine erste Recherche wird ergeben haben: um so teurer das Gerät, um so leichter lässt es sich als Remote Station verwenden. Sehr gute Funkstandorte haben dann auch noch diese Probleme:
 - Standort schwer erreichbar,
 - Kein Strom im potenziellen Shack,
 - kein Schutz vor Wetter beim perfekten Antennenspannplatz.
 
-Wer möchte da schon ein 2.000 Euro teures Amateurfunkgerät kaufen, welches dann Wind und Wetter ausgesetzt ist?
-Somit bleibt eigentlich nur der Selbstbau um ein geeignetes Funkgerät zu bauen welches Wind und Wetter trotzt und einfach im Aufbau und der Bedienung ist.
+Wer möchte da schon ein 2.000 Euro teures Amateurfunkgerät kaufen, welches dann Wind, Wetter und potentiellen Langfingern ausgesetzt ist?
+Somit bleibt eigentlich nur der Selbstbau um ein geeignetes Funkgerät zu bauen welches Wind und Wetter trotzt und einfach in Aufbau und Bedienung ist.
 
-## Gründung eines Amateurfunkklubs mit Fokus auf Remotestationen
+## Gründung eines Amateurfunkclubs mit Fokus auf Remotestationen
 
-Da so ein Projekt meist von mehreren Personen gestemmt werden muss, war für uns der nächste logische Schritt die Gründung eines **Amateurfunkclubs für Remote Stationen**.
-Gemeinsam möchten wir so Remotestationen in Österreich aufbauen, Kernpunkte des Ganzen sind:
+Da ein Projekt dieser Dimension meist von mehreren Personen gestemmt werden muss, war für uns der nächste logische Schritt die Gründung eines **Amateurfunkclubs für Remote Stationen**.
+Gemeinsam planen wir Remotestationen in Österreich aufzubauen. Kernpunkte des Ganzen sind:
 - Entwicklung einer modularen Funkstation,
 - Entwicklung von Firmware und Software,
+- Abklärung mit Eigentümer des Standorts,
 - Suchen geeigneter Standorte und definieren der Station,
 - Aufbau von Stationen für verschiedene Anwendungen und Standorte (2m, 70cm, KW, HAMNET oder LTE-Anbindung, etc.),
 - Aufbau neuer Standorte (Funkgerät, Antenne, Stromversorgung, etc.),
-- Wartung existierende Standorte,
+- Wartung existierender Standorte,
 - Wartung der Serverinfrastruktur.
 
-Die Gründung des Vereins erfolgte im September 2024, der Beitritt als ADL525 war mit November des selben Jahres abgeschlossen.
+Die Gründung des Vereins erfolgte bereits im September 2024. Der Beitritt als ADL525 war mit November des selben Jahres abgeschlossen.
 Der Beitritt als ADL525 war für uns ein wichtiger Schritt da wir einen starken Dachverein hinter uns haben wollten. Wir sehen uns nicht als klassischen ADL mit regelmäßigen Treffen im Clubheim sondern als eine Gruppe von technisch interessierten Amateurfunkern die ein gemeinsames Projekt haben: **Aufbau und Betrieb von Remote Stationen in Österreich**.
+Selbstverständlich werden wir uns immer mal wieder treffen und zusammensetzen, es wird aber keinen zeitlich oder räumlich festen Treffpunkt geben. Der soziale Aspekt baut auf die Flexibilität und Eigeninitiative der Mitglieder.
 
 ### Aktueller Stand
 
-Aktuell wird an einer modularen Funkstation gearbeitet. Hierbei soll der Fokus auf wichtige Basiskomponenten liegen die auch für zukünftige Entwicklungen wiederverwendet werden sollen:
+Aktuell wird an einer modularen Funkstation gearbeitet. Hierbei soll der Fokus auf wichtigen Basiskomponenten liegen die auch für zukünftige Entwicklungen wiederverwendet werden sollen:
 - Aufbau ähnlich wie ein Modulgruppenträger von 19 Zoll Geräten:
   - Modulare Einzelmodule
   - Bus-System als Backplane
 - Einfache und günstige Fertigung eines Gehäuses (3D Druck)
 - optional 19 Zoll kompatibel zum Einbau in einen existierenden Server/Netzwerk-Schrank.
 
-Die technischen Ausführung sowie die Dokumentation werden mit Open Source Tools gelöst. Dies ist uns wichtig um neuen Mitgliedern einen leichten Einstieg zu geben und Kosten zu reduzieren.
-Weiters werden alle Projekte des Vereines als Open Source Projekte geführt und werden somit auf Github (https://github.com/OE5XRX) veröffentlicht.
+Die technische Ausführung sowie die Dokumentation werden mit Open Source Tools gelöst. Dies ist uns wichtig um neuen Mitgliedern einen leichten Einstieg zu geben und Kosten zu reduzieren.
+Weiters werden alle Projekte des Vereines als Open Source Projekte geführt und somit auch auf Github (https://github.com/OE5XRX) veröffentlicht.
 
 ### OE5XRX
 
 Bereits nach Gründung des Vereines stellten wir den Antrag für ein Club-Rufzeichen: OE5XRX.
 Dies ist aktuell in Gunskirchen, Oberösterreich und als zweiten Sitz in Döbriach, Kärnten gemeldet.
-An dem Standort in Oberösterreich befindet sich schon eine kleine Remote Station für die Bänder 2m und 70cm welche jedoch von unserem Konzept noch heuer abgelöst werden soll.
+An dem oben genannten Standort in Oberösterreich befindet sich schon eine kleine Remote Station für die Bänder 2m und 70cm welche von unserem neuen Konzept 2025 abgelöst werden soll.
 
-Wir suchen aktuell viele neue tatkräftige Kollegen die uns bei unserem Projekt und unserem Verein helfen wollen.
-Weitere Informationen findet Ihr hier https://oe5xrx.org oder Ihr könnt euch auch unter oe5xrx AT gmail PUNKT com bei uns melden.
-Solltet Ihr uns einfach nur Finanziell unterstützen wollen, weil euch die Idee gefällt, könnt Ihr das hier machen: https://www.gofundme.com/f/gemeinsam-remotestationen-fur-funkbegeisterte-schaffen
+Wir suchen aktuell noch weitere tatkräftige Kollegen die bei dem Projekt und im Verein helfen wollen.
+Weitere Informationen unter oe5xrx AT gmail PUNKT com oder https://oe5xrx.org.
+Solltet Ihr uns einfach nur Finanziell unterstützen wollen weil euch die Idee gefällt, könnt Ihr das hier machen: https://www.gofundme.com/f/gemeinsam-remotestationen-fur-funkbegeisterte-schaffen
+
+Peter (OE5BPA), Clemens (OE5BUC), Alan (OE5LAN) und David (SWL) von OE5XRX
