--- a/docs/publikationen/qsp-04-2025.md
+++ b/docs/publikationen/qsp-04-2025.md
@@ -68,4 +68,4 @@ Wir suchen aktuell noch weitere tatkräftige Kollegen die bei dem Projekt und im
 Weitere Informationen unter oe5xrx AT gmail PUNKT com oder https://oe5xrx.org.
 Solltet Ihr uns einfach nur Finanziell unterstützen wollen weil euch die Idee gefällt, könnt Ihr das hier machen: https://www.gofundme.com/f/gemeinsam-remotestationen-fur-funkbegeisterte-schaffen
 
-Peter (OE5BPA), Clemens (OE5BUC), Alan (OE5LAN) und David (SWL) von OE5XRX
+Peter (OE5BPA), Clemens (OE5BUC), Alan (OE5LAE) und David (SWL) von OE5XRX
