add markdown links

--- a/docs/publikationen/qsp-04-2025.md
+++ b/docs/publikationen/qsp-04-2025.md
@@ -56,7 +56,7 @@ Aktuell wird an einer modularen Funkstation gearbeitet. Hierbei soll der Fokus a
 - optional 19 Zoll kompatibel zum Einbau in einen existierenden Server/Netzwerk-Schrank.
 
 Die technische Ausführung sowie die Dokumentation werden mit Open Source Tools gelöst. Dies ist uns wichtig um neuen Mitgliedern einen leichten Einstieg zu geben und Kosten zu reduzieren.
-Weiters werden alle Projekte des Vereines als Open Source Projekte geführt und somit auch auf Github (https://github.com/OE5XRX) veröffentlicht.
+Weiters werden alle Projekte des Vereines als Open Source Projekte geführt und somit auch auf Github ([https://github.com/OE5XRX](https://github.com/OE5XRX)) veröffentlicht.
 
 ### OE5XRX
 
@@ -65,7 +65,7 @@ Dies ist aktuell in Gunskirchen, Oberösterreich und als zweiten Sitz in Döbria
 An dem oben genannten Standort in Oberösterreich befindet sich schon eine kleine Remote Station für die Bänder 2m und 70cm welche von unserem neuen Konzept 2025 abgelöst werden soll.
 
 Wir suchen aktuell noch weitere tatkräftige Kollegen die bei dem Projekt und im Verein helfen wollen.
-Weitere Informationen unter oe5xrx AT gmail PUNKT com oder https://oe5xrx.org.
-Solltet Ihr uns einfach nur Finanziell unterstützen wollen weil euch die Idee gefällt, könnt Ihr das hier machen: https://www.gofundme.com/f/gemeinsam-remotestationen-fur-funkbegeisterte-schaffen
+Weitere Informationen unter oe5xrx AT gmail PUNKT com oder [https://oe5xrx.org](https://oe5xrx.org).
+Solltet Ihr uns einfach nur Finanziell unterstützen wollen weil euch die Idee gefällt, könnt Ihr das hier machen: [https://www.gofundme.com/f/gemeinsam-remotestationen-fur-funkbegeisterte-schaffen](https://www.gofundme.com/f/gemeinsam-remotestationen-fur-funkbegeisterte-schaffen)
 
 Peter (OE5BPA), Clemens (OE5BUC), Alan (OE5LAE) und David (SWL) von OE5XRX
