add changes from OE6PGM

--- a/docs/publikationen/qsp-04-2025.md
+++ b/docs/publikationen/qsp-04-2025.md
@@ -4,48 +4,48 @@ nav_order: 1
 parent: Publikationen
 ---
 
-# QSP "Der Neue Amateurfunkclub Für Remotestationen" (geplant für April 2025)
+# QSP "Neu gegründeter Amateurfunkclub für Remotestationen" (geplant für April 2025)
 
-Hast Du Zuhause eine Antenne für den Amateurfunk fix montiert? Nein? Dann wohnst Du aus Funkperspektive betrachtet vermutlich nicht in einer guten Lage. Beispielsweise im 1. Stock von einem Hochhaus, in einer verwinkelte Wohnanlage, ein Okay des Vermieters eine Antenne auf dem Dach zu montieren fehlt, oder aber deine XYL findet Antennen einfach nur "hässlich".
-Fast jeder kennt diese Probleme, man ist dann ganz einfach "**Antennengeschädigt**".
+Hast Du Zuhause eine Antenne für den Amateurfunk fix montiert? Nein? Dann wohnst Du aus der Funkperspektive betrachtet vermutlich nicht in einer guten Lage. Beispielsweise im 1. Stock von einem Hochhaus, in einer verwinkelten Wohnanlage, ein Okay des Vermieters eine Antenne auf dem Dach zu montieren fehlt, oder aber deine XYL findet Antennen einfach nur "hässlich".
+Fast jeder kennt diese Probleme, man ist dann ganz einfach "Antennengeschädigt".
 
 Wenn sich die oben genannten Probleme nicht direkt lösen lassen, verkriecht sich der findige Funkamateur dann in den nicht vorhandenen Shack und fängt zu denken an...
 
-Wo kann man nun die gewünschten Antenne(n) aufbauen, ohne dass man gleich einen Grund kaufen muss? Was für Geräte brauch ich dazu und was muss man dafür bezahlen? Gäbe es doch nur die Möglichkeit, jederzeit zum Wochenendhäuschen in die Berge zu fahren...
+Wo kann man nun die gewünschte(n) Antenne(n) aufbauen, ohne dass man gleich einen Grund kaufen muss? Welche Geräte brauche ich dazu und was muss man dafür bezahlen? Gäbe es doch nur die Möglichkeit, jederzeit zum Wochenendhäuschen in die Berge zu fahren...
 
 Eine tolle Möglichkeit wäre es, eine Remote Station aufzubauen und diese von Zuhause aus zu betreiben. Im Grunde eine gute Idee! Klingt aber irrsinnig aufwändig.
 
-Mit Remotestationen lässt sich nicht nur das Antennenproblem lösen, sondern bieten auch eine einige weitere Anwendungsmöglichkeiten:
+Mit Remotestationen lässt sich nicht nur das Antennenproblem lösen, sondern sie bieten auch weitere Anwendungsmöglichkeiten:
 - um dem hohen Rauschpegel am Stadtrand zu entkommen,
 - für DX-Peditionen zu Inseln in Naturschutzgebieten,
 - einfach um sich die noch besseren Konditionen von anderen/weiteren Standorten zu nutzen.
 
 
-Deine erste Recherche wird ergeben haben: um so teurer das Gerät, um so leichter lässt es sich als Remote Station verwenden. Sehr gute Funkstandorte haben dann auch noch diese Probleme:
+Deine erste Recherche wird ergeben haben: umso teurer das Gerät, desto leichter lässt es sich als Remote Station verwenden. Sehr gute Funkstandorte haben dann auch noch diese Probleme:
 - Standort schwer erreichbar,
 - Kein Strom im potenziellen Shack,
-- kein Schutz vor Wetter beim perfekten Antennenspannplatz.
+- kein Schutz vor (Un-)Wetter beim perfekten Antennenspannplatz.
 
 Wer möchte da schon ein 2.000 Euro teures Amateurfunkgerät kaufen, welches dann Wind, Wetter und potentiellen Langfingern ausgesetzt ist?
-Somit bleibt eigentlich nur der Selbstbau um ein geeignetes Funkgerät zu bauen welches Wind und Wetter trotzt und einfach in Aufbau und Bedienung ist.
+Somit bleibt eigentlich nur der Selbstbau um ein geeignetes Funkgerät zu bauen, welches Wind und Wetter trotzt und einfach in Aufbau und Bedienung ist.
 
 ## Gründung eines Amateurfunkclubs mit Fokus auf Remotestationen
 
-Da ein Projekt dieser Dimension meist von mehreren Personen gestemmt werden muss, war für uns der nächste logische Schritt die Gründung eines **Amateurfunkclubs für Remote Stationen**.
+Da ein Projekt dieser Dimension meist von mehreren Personen gestemmt werden muss, war für uns der nächste logische Schritt die Gründung eines Amateurfunkclubs für Remote Stationen.
 Gemeinsam planen wir Remotestationen in Österreich aufzubauen. Kernpunkte des Ganzen sind:
 - Entwicklung einer modularen Funkstation,
 - Entwicklung von Firmware und Software,
 - Abklärung mit Eigentümer des Standorts,
 - Suchen geeigneter Standorte und definieren der Station,
-- Aufbau von Stationen für verschiedene Anwendungen und Standorte (2m, 70cm, KW, HAMNET oder LTE-Anbindung, etc.),
+- Aufbau von Stationen für verschiedene Anwendungen und Standorte (2m, 70cm, KW, etc. mit HAMNET oder LTE-Anbindung),
 - Aufbau neuer Standorte (Funkgerät, Antenne, Stromversorgung, etc.),
 - Wartung existierender Standorte,
 - Wartung der Serverinfrastruktur.
 
-Die Gründung des Vereins erfolgte bereits im September 2024. Der Beitritt als ADL525 war mit November des selben Jahres abgeschlossen.
-Der Beitritt als ADL525 war für uns ein wichtiger Schritt da wir einen starken Dachverein hinter uns haben wollten. Wir sehen uns nicht als klassischen ADL mit regelmäßigen Treffen im Clubheim sondern als eine Gruppe von technisch interessierten Amateurfunkern die ein gemeinsames Projekt haben: **Aufbau und Betrieb von Remote Stationen in Österreich**.
+Die Gründung des Vereins erfolgte bereits im September 2024. Der Beitritt als ADL525 war mit November desselben Jahres abgeschlossen.
+Der Beitritt als ADL525 war für uns ein wichtiger Schritt, da wir einen starken Dachverein hinter uns haben wollten. Wir sehen uns nicht als klassischen ADL mit regelmäßigen Treffen im Clubheim sondern als eine Gruppe von technisch interessierten Funkamateuren, die ein gemeinsames Projekt haben: Aufbau und Betrieb von Remote Stationen in Österreich.
 
-Selbstverständlich werden wir uns immer mal wieder treffen und zusammensetzen, es wird aber keinen zeitlich oder räumlich festen Treffpunkt geben. Der soziale Aspekt baut auf die Flexibilität und Eigeninitiative der Mitglieder.
+Selbstverständlich werden wir uns immer wieder mal treffen und zusammensetzen, es wird aber keinen zeitlich oder räumlich festen Treffpunkt geben. Der soziale Aspekt baut auf die Flexibilität und Eigeninitiative der Mitglieder.
 
 ### Aktueller Stand
 
@@ -65,8 +65,8 @@ Bereits nach Gründung des Vereines stellten wir den Antrag für ein Club-Rufzei
 Dies ist aktuell in Gunskirchen, Oberösterreich und als zweiten Sitz in Döbriach, Kärnten gemeldet.
 An dem oben genannten Standort in Oberösterreich befindet sich schon eine kleine Remote Station für die Bänder 2m und 70cm welche von unserem neuen Konzept 2025 abgelöst werden soll.
 
-Wir suchen aktuell noch weitere tatkräftige Kollegen die bei dem Projekt und im Verein helfen wollen.
+Wir suchen aktuell noch weitere tatkräftige Kollegen, die bei dem Projekt und im Verein helfen wollen.
 Weitere Informationen über <a href="mailto:{{ 'oe5xrx@gmail.com' | encode_email }}" title="Mail">Mail</a> oder [https://oe5xrx.org](https://oe5xrx.org).
-Solltet Ihr uns einfach nur Finanziell unterstützen wollen weil euch die Idee gefällt, könnt Ihr das hier machen: [https://www.gofundme.com/f/gemeinsam-remotestationen-fur-funkbegeisterte-schaffen](https://www.gofundme.com/f/gemeinsam-remotestationen-fur-funkbegeisterte-schaffen)
+Solltet Ihr uns einfach nur finanziell unterstützen wollen, weil euch die Idee gefällt, könnt Ihr das hier machen: [https://www.gofundme.com/f/gemeinsam-remotestationen-fur-funkbegeisterte-schaffen](https://www.gofundme.com/f/gemeinsam-remotestationen-fur-funkbegeisterte-schaffen)
 
 Peter (OE5BPA), Clemens (OE5BUC), Alan (OE5LAE) und David (SWL) von OE5XRX
