--- a/docs/publikationen/qsp-04-2025.md
+++ b/docs/publikationen/qsp-04-2025.md
@@ -66,7 +66,7 @@ Dies ist aktuell in Gunskirchen, Oberösterreich und als zweiten Sitz in Döbria
 An dem oben genannten Standort in Oberösterreich befindet sich schon eine kleine Remote Station für die Bänder 2m und 70cm welche von unserem neuen Konzept 2025 abgelöst werden soll.
 
 Wir suchen aktuell noch weitere tatkräftige Kollegen, die bei dem Projekt und im Verein helfen wollen.
-Kontakt kannst du mit uns über <a href="mailto:{{ 'oe5xrx@gmail.com' | encode_email }}" title="Mail">Mail</a> oder [Telegram](https://t.me/+0QqkHfEH0IM4YzU0) aufbauen. Auf unserer [Webseite](https://oe5xrx.org) findest du noch mehr Informationen zum Verein und Projekt.
+Kontakt kannst du mit uns über [Telegram](https://t.me/+0QqkHfEH0IM4YzU0) oder <a href="mailto:{{ 'oe5xrx@gmail.com' | encode_email }}" title="Mail">Mail</a> aufbauen. Auf unserer [Webseite](https://oe5xrx.org) findest du noch mehr Informationen zum Verein und Projekt.
 Solltet Ihr uns einfach nur finanziell unterstützen wollen, weil euch die Idee gefällt, könnt Ihr das gerne hier machen: [https://www.gofundme.com/f/gemeinsam-remotestationen-fur-funkbegeisterte-schaffen](https://www.gofundme.com/f/gemeinsam-remotestationen-fur-funkbegeisterte-schaffen)
 
 Peter (OE5BPA), Clemens (OE5BUC), Alan (OE5LAE) und David (SWL) von OE5XRX
