--- a/docs/publikationen/qsp-10-2025.md
+++ b/docs/publikationen/qsp-10-2025.md
@@ -7,7 +7,7 @@ parent: Publikationen
 # OE5XRX Remote-Station – Struktur, Aufbau und aktueller Entwicklungsstand
 
 Im QSP 04/2025 wurde erstmals über den neu gegründeten Amateurfunkclub **OE5XRX** berichtet, dessen Ziel es ist, eine modulare Remote-Station für den Amateurfunk zu entwickeln, aufzubauen und in Österreich zu betreiben.  
-Seither ist viel passiert: Nicht nur die grundlegende Architektur wurde definiert, auch die ersten Hardware-Revisionen sind fertiggestellt, getestet und bereits beim **DXCamp in Döbriach** vorgestellt worden.  
+Seither ist viel passiert: Nicht nur die grundlegende Architektur wurde definiert, auch die ersten Hardware-Revisionen sind fertiggestellt, getestet und bereits beim **DX-Camp in Döbriach** vorgestellt worden.  
 Dieser Artikel gibt einen Überblick über den **Aufbau der Station** und den **aktuellen Stand der Entwicklung**.
 
 ---
@@ -19,8 +19,8 @@ Eine zentrale **Bus-Platine** bildet dabei das Rückgrat: Sie übernimmt die mec
 
 Darauf aufbauend sind spezialisierte Funktionsmodule vorgesehen:
 
-- **CM4-Platine:** Nimmt ein Raspberry Pi Compute Module 4 auf, das als zentrale Steuer- und Netzwerk-Einheit dient. Über LAN, GPIO, I²C und UART werden die angeschlossenen Module verwaltet.  
-- **Power-Platine:** Versorgt die gesamte Station mit geregelten Spannungen (z. B. 5 V, 3,3 V) und überwacht Strom und Spannung.  
+- **CM4-Platine:** Nimmt ein Raspberry Pi Compute Module 4 auf, das als zentrale Steuer- und Netzwerk-Einheit dient. Über LAN, USB und I²C werden die angeschlossenen Module verwaltet.  
+- **Power-Platine:** Versorgt die gesamte Station mit geregelten Spannungen (z. B. 12 V, 5 V) und überwacht Strom und Spannung.  
 - **Device-Tester-Platine:** Dient als flexibles Interface, um Peripherie und Endgeräte vor deren dauerhafter Integration zu prüfen.  
 - **FM-Platine:** Neu hinzugekommen und erstmals mit einem STM32-Mikrocontroller ausgestattet. Sie bindet ein SA818V-Modul ein und ermöglicht FM-Betrieb auf VHF/UHF.  
 
@@ -67,3 +67,67 @@ Interessierte sind eingeladen, sich auf der Projektseite zu informieren und einz
 
 ![Blockdiagramm Struktur](docs/img/remote-station-blockdiagram.png)  
 *Abb. 2: Blockdiagramm der aktuellen Struktur mit Bus und Modulen. Geplante Erweiterungen sind gestrichelt dargestellt.*
+
+## Diagramm
+
+```mermaid
+flowchart TB
+  %% ==========================================
+  %% OE5XRX Remote-Station – Blockschaltbild (v0.2)
+  %% ==========================================
+
+POWER("Power-Module")
+BUS("Bus")
+CM4("CM4-Module (Computer Module 4)")
+FM("FM-Module")
+ANT("Antenne")
+TEST("Device Tester")
+ETH("Ethernet")
+
+POWER -- 5V, 12V, I2C --> BUS
+CM4 <-- 5V, USB, I2C --> BUS
+CM4 --> ETH
+BUS -- 5V, 12V, USB --> FM
+FM <--> ANT
+BUS <-- 5V, 12V, USB --> TEST
+
+%%  %% Backplane / Bus-Systeme
+%%  subgraph BUS["BUS / Backplane"]
+%%    PWR["Power-Bus (5V / 3V3)"]
+%%    CTRL["Control/IO-Bus (GPIO / I²C / UART)"]
+%%    NET["Netzwerk (Ethernet)"]
+%%  end
+
+%%  %% Module (aktuell implementiert)
+%%  subgraph MOD["Module (aktuell, Version 0.2)"]
+%%    CM4["CM4-Platine (Compute Module 4)"]
+%%    POWER["Power-Platine"]
+%%    TEST["Device-Tester-Platine"]
+%%    FM["FM-Platine (SA818V + STM32)"]
+%%  end
+
+%%  %% Extern (optional)
+%%  subgraph EXT["Extern (optional)"]
+%%    ANT["Antenne"]
+%%  end
+
+%%  %% Versorgungsstruktur
+%%  POWER -->|Einspeisung| PWR
+%%  PWR --> CM4
+%%  PWR --> TEST
+%%  PWR --> FM
+
+%%  %% Steuer-/IO-Bus
+%%  CM4 <-->|Steuerung/IO| CTRL
+%%  TEST <-->|Mess/IO| CTRL
+%%  FM <-->|PTT/UART| CTRL
+
+  %% Netzwerk
+%%  CM4 <-->|LAN| NET
+
+  %% HF-Pfad (optional)
+%%  FM -->|RF Out| ANT
+
+  %% Anmerkung
+  %%note over BUS,MOD: Backplane stellt mechanische & elektrische Verbindung bereit
+```
