--- a/docs/publikationen/qsp-10-2025.md
+++ b/docs/publikationen/qsp-10-2025.md
@@ -42,7 +42,7 @@ Dafür wurde ein **Firmware-Projekt** aufgesetzt, das ebenfalls modular struktur
 Die Software soll mit **Unit-Tests** und **Host-Debugging** entwickelt werden, um eine saubere und nachhaltige Code-Basis zu schaffen.  
 Ziel ist es, künftige Module ebenfalls unkompliziert softwareseitig einzubinden und den Betrieb der Remote-Station langfristig stabil zu halten.
 
-Ein wichtiger Meilenstein war die Präsentation beim **DXCamp in Döbriach**.  
+Ein wichtiger Meilenstein war die Präsentation beim **DX-Camp in Döbriach**.  
 Dort konnten die funktionierenden Platinen erstmals einem breiteren Publikum gezeigt werden.  
 In Gesprächen mit anderen Funkamateuren ergaben sich wertvolle Impulse und die Aussicht auf mögliche **Kooperationen**, die das Projekt in Zukunft bereichern könnten.
 
